# ProjectTMP_2025

./: .dockerignore  CMakeLists.txt  Dockerfile  README.md  RSA_server.cpp  TestCase_1(Ермаков).xlsx  TestCase_3 Merkulov.xlsx  index.html  test.txt  СтратегияТестированияЧек-листДефектТест-кейс.xlsx  Тест_кейс2_Панов_Александр_241-371.xlsx
RSA/test_RSA/: CMakeLists.txt  main.cpp  rsa.h  rsafunc.cpp
UnitTest/: test_parsing.cpp
client/: CMakeLists.txt  authorization.cpp  authorization.h  authorization.ui  functionClient.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  myCrypt.h  result.cpp  result.ui  singleton_client.cpp  singleton_client.h  task1.cpp  task1.h  task1.ui  task2.cpp  task2.h  task2.ui
doxygen/client/html/: annotated.html  annotated_dup.js  authorization_8cpp.html  authorization_8h.html  authorization_8h.js  authorization_8h_source.html  class_main_window.html  class_s_h_a256_1_1_r_s_a-members.html  class_s_h_a256_1_1_r_s_a.html  class_s_h_a256_1_1_r_s_a.js  class_singleton_client-members.html  class_singleton_client.html  class_singleton_client.js  class_singleton_destroyer-members.html  class_singleton_destroyer.html  class_singleton_destroyer.js  classauthorization-members.html  classauthorization.html  classauthorization.js  classes.html  classresult-members.html  classresult.html  classresult.js  classtask1-members.html  classtask1.html  classtask1.js  classtask2-members.html  classtask2.html  classtask2.js  doxygen_crawl.html  files.html  files_dup.js  function_client_8h.html  function_client_8h.js  function_client_8h_source.html  functions.html  functions_func.html  globals.html  globals_func.html  hierarchy.html  (+38 more)
doxygen/client/html/search/: all_0.js  all_1.js  all_3.js  all_4.js  all_5.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_e.js  (+15 more)
doxygen/server/: _r_s_a_8h.html  _r_s_a_8h.js  _r_s_a_8h_source.html  class_database_manager-members.html  class_database_manager.html  class_database_manager.js  class_my_tcp_server-members.html  class_my_tcp_server.html  class_r_s_a-members.html  class_task_manager-members.html  class_task_manager.html  class_task_manager.js  classes.html  databasemanager_8h.html  databasemanager_8h_source.html  files.html  files_dup.js  func2serv_8cpp.js  func2serv_8h.js  func2serv_8h_source.html  functions.html  functions_func.html  functions_vars.html  globals.html  globals_defs.html  globals_enum.html  gradientdescent_8cpp.html  gradientdescent_8h.js  hierarchy.html  hierarchy.js  mytcpserver_8h.html  mytcpserver_8h_source.html  navtreedata.js  navtreeindex0.js  spline_8h.html  spline_8h.js  struct_client_state.html  struct_client_state.js  struct_polynomial_task-members.html  struct_polynomial_task.html  (+6 more)
doxygen/server/html_UnitTest/: annotated.html  annotated_dup.js  class_test_parsing-members.html  class_test_parsing.html  classes.html  doxygen_crawl.html  files.html  files_dup.js  hierarchy.html  hierarchy.js  navtreeindex0.js  test__parsing_8cpp.html  test__parsing_8cpp.js
doxygen/server/html_include/: _r_s_a_8cpp.html  annotated.html  annotated_dup.js  class_r_s_a.html  databasemanager_8cpp.html  doxygen_crawl.html  func2serv_8h.html  globals_func.html  gradientdescent_8h.html  gradientdescent_8h_source.html  main_8cpp.html  mytcpserver_8cpp.html  spline_8cpp.html  spline_8h_source.html  struct_client_state-members.html  struct_task_data.html  taskmanager_8h.html  taskmanager_8h.js  taskmanager_8h_source.html
doxygen/server/html_src/: doxygen_crawl.html  files.html  files_dup.js  func2serv_8cpp.html  globals.html  globals_func.html  gradientdescent_8cpp.js  navtreeindex0.js  spline_8cpp.js  taskmanager_8cpp.html
doxygen/server/search/: all_1.js  all_2.js  all_4.js  all_5.js  all_6.js  all_8.js  all_9.js  all_e.js  all_f.js  classes_6.js  defines_0.js  enums_0.js  enumvalues_0.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_6.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  searchdata.js  variables_2.js  variables_5.js  variables_7.js
include/: databasemanager.h  func2serv.h  gradientdescent.h  mytcpserver.h  sha256.hpp
src/: RSA.cpp  databasemanager.cpp  func2serv.cpp  gradientdescent.cpp  main.cpp  mytcpserver.cpp  taskmanager.cpp
(+35 files in other folders)
